--- a/182258/index.html
+++ b/182258/index.html
@@ -19,27 +19,37 @@
                 <label>
                     <span>Username</span>
                     <img src="./icons/user.svg" alt="" />
-                    <input />
+                    <input type="text"  pattern="[A-Za-z0-9]{3,32}">
+                    <!-- الگوی ورودی برای حروف کوچک و بزرگ انگلیسی و اعداد -->
                 </label>
                 <label>
                     <span>Email</span>
                     <img src="./icons/email.svg" alt="" />
-                    <input />
+                    <input 
+                    type="email" 
+                  >
                 </label>
                 <label>
                     <span>Phone</span>
                     <img src="./icons/phone.svg" alt="" />
-                    <input />
+                    <input type="tel" pattern="(\+989|00989|09)[0-9]{9}"/>
+                    <!-- الگوی ورودی برای تلفن -->
                 </label>
                 <label>
                     <span>Password</span>
                     <img src="./icons/password.svg" alt="" />
-                    <input />
+                    <input 
+                    type="password"
+                    id="password"
+                    pattern="^(?=.*a-z)(?=.*A-Z)(?=.*0-9)(?=.*[!@#$%^&*])"
+                minlength="8"
+                maxlength="32"
+                  >
                 </label>
-                <button>Register</button>
+                <button type="submit">Register</button>
                 <p>
                     Already have an account?
-                    <a>Log in</a>
+                    <a href="#login">Log in</a>
                 </p>
             </form>
             <section>
@@ -47,19 +57,26 @@
             </section>
             <form id="login">
                 <label>
-                    <span>Username</span>
-                    <img src="./icons/user.svg" alt="" />
-                    <input />
+                    <span>Phone</span>
+                    <img src="./icons/phone.svg" alt="" />
+                    <input type="tel" pattern="(\+989|00989|09)[0-9]{9}"/>
+                    <!-- الگوی ورودی برای تلفن -->
                 </label>
                 <label>
                     <span>Password</span>
                     <img src="./icons/password.svg" alt="" />
-                    <input />
+                    <input 
+                    type="password"
+                    id="password"
+                    pattern="^(?=.*a-z)(?=.*A-Z)(?=.*0-9)(?=.*[!@#$%^&*])"
+                minlength="8"
+                maxlength="32"
+                  >
                 </label>
-                <button>Login</button>
+                <button type="submit">Login</button>
                 <p>
                     Don't have an account?
-                    <a>Register</a>
+                    <a href="#register">Register</a>
                 </p>
             </form>
         </main>
